fix modal z-index

--- a/resources/components/modal/index.styl
+++ b/resources/components/modal/index.styl
@@ -8,6 +8,7 @@
   position fixed
   top 0
   left 0
+  z-index 4
   overflow-y auto
   background rgba(0, 0, 0, 0.1)
 
