--- a/resources/components/perspective-selector/index.styl
+++ b/resources/components/perspective-selector/index.styl
@@ -31,7 +31,7 @@
   background #fff
   color textColor
   box-shadow 0 0 2px rgba(0, 0, 0, 0.3)
-  z-index 20
+  z-index 1
 
 .perspective__icon
   width 40px
